--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
   }
   
   .showcase .overlay {
-    width: 100%;
+    width: 90%;
     height: 500px;
     position: absolute;
     top: 0;
@@ -31,9 +31,17 @@
     margin-left: 5%;
     vertical-align: bottom;
   }  
+
+  .overlay-header{
+    font-size: 5rem !important;
+  }
+
+  .overlay-body{
+    font-size: 2rem !important;
+  }
   
   .showcase .overlay-appointment {
-    width: 100%;
+    width: 90%;
     height: auto;
     position: absolute;
     top: 0;
@@ -41,6 +49,7 @@
     z-index:999;
     text-align: center;
     vertical-align: middle;
+    margin-left:5%;
   }
   
   .showcase h2 {
@@ -65,6 +74,16 @@
   #appointment-link{
     text-decoration: none;
     color: #252525;
+  }
+
+  .more-link{
+    text-decoration: none;
+    color: #FFFFFF;
+  }
+  
+  .more-link:hover{
+    text-decoration: none;
+    color: lightgray;
   }
 
   #appointment-header{
