--- a/css/style.css
+++ b/css/style.css
@@ -215,3 +215,11 @@
     margin-top: 1.5%;
     margin-bottom: 1.5%;
   }
+
+  .carousel{
+    width: 65%;
+    margin: auto;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    background-color: #252525;
+  }
