--- a/css/style.css
+++ b/css/style.css
@@ -221,5 +221,12 @@
     margin: auto;
     margin-top: 3%;
     margin-bottom: 3%;
-    background-color: #252525;
+    background-color: rgba(37,37,37,0.7);
+    border-radius: 10px;
+  }
+
+  .carousel-row{
+    padding: 5%;
+    text-align: center; 
+    color: white;
   }
