--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,10 @@
     margin-bottom: 3%;
   }
 
+  .reference-text{
+    font-weight: bold;
+  }
+
   .profile-thumb {
     background-size: cover !important;
     background-position: center center;
@@ -171,6 +175,7 @@
     width: 150px;
     margin: 0 auto;
     margin-bottom: 2%;
+    margin-top: 5% !important;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -234,13 +239,18 @@
   }
 
   .about-section{
-    margin-top: 3%;
     text-align: left;
+    width: 60%; 
+    margin: auto;
+    margin-top: 5%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 
   .about-img{
     padding: 3%;
-    width: 100%;
+    width: 60%;
   }
 
   .about-text, h4, h6{
