--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@
     color: white;
     margin: 1%;
   }
+
+  .link-black{
+    text-decoration: none;
+    color: black;
+    margin: 1%;
+  }
   
   .showcase .overlay {
     width: 90%;
@@ -71,7 +77,7 @@
   }
 
   .content-text{
-    width: 65%;
+    width: 80%;
     margin: auto;
   }
   
@@ -153,7 +159,7 @@
   }
   
   .reference-body{
-    width: 75%;
+    width: 80%;
     margin: auto;
   }
 
@@ -214,15 +220,19 @@
   .link:hover{
     color:lightgray;
   }
+  
+  .link-black:hover{
+    color:gray;
+  }
   #accordionFlushExample{
-    width: 65% !important;
+    width: 80% !important;
     margin: auto;
     margin-top: 1.5%;
     margin-bottom: 1.5%;
   }
 
   .carousel{
-    width: 65%;
+    width: 80%;
     margin: auto;
     margin-top: 3%;
     margin-bottom: 3%;
@@ -240,9 +250,9 @@
 
   .about-section{
     text-align: left;
-    width: 60%; 
+    width: 80%; 
     margin: auto;
-    margin-top: 5%;
+    margin-bottom: 3%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -264,4 +274,14 @@
 
   .about-quote{
     font-weight: normal;
+  }
+
+  .info-je{
+    font-weight: 500;
+  }
+
+  .horizontal-line{
+    width: 80%;
+    margin: auto;
+    margin-top: 6%;
   }
